# Lightsoff_final

./: .gitignore  CMakeLists.txt  README.md  gitignore  kandidater.txt  main.cpp
.github/workflows/: config.yml
include/: Box.hpp  gridScene.hpp  play.h
src/: CMakeLists.txt  gridScene.cpp
tests/: CMakeLists.txt  test_box.cpp  test_toggle.cpp
